# CMakeLists.txt to build programs

ADD_SUBDIRECTORY (contribPrograms)
IF (NOT DADS_BUILD_WITHOUT_DADS)
	ADD_SUBDIRECTORY (dExec)
	ADD_SUBDIRECTORY (dListener)
	ADD_SUBDIRECTORY (dRepeat)
	ADD_SUBDIRECTORY (dUnsetEnv)
	ADD_SUBDIRECTORY (dCreateShm)
	ADD_SUBDIRECTORY (dKiller)
	ADD_SUBDIRECTORY (dListener-stop)
	ADD_SUBDIRECTORY (dSetEnv)
	ADD_SUBDIRECTORY (soundPlayer)
ENDIF (NOT DADS_BUILD_WITHOUT_DADS)

