# CMakeLists.txt to build doc

IF (DGL_BUILD_DOCUMENTATION)
	IF (DOXYGEN_DOT_PATH)
		SET (DOT_PATH "${DOXYGEN_DOT_PATH}")
		IF (WIN32)
			STRING (REPLACE "/" "\\\\" DOT_PATH "${DOT_PATH}")
		ENDIF (WIN32)
	ENDIF (DOXYGEN_DOT_PATH)

	IF (DOXYGEN_EXECUTABLE)
		SET (DOXYFILE_TAG_FILE "${DGL_BINARY_DIR}/doc/Doxyfile-tag")
		SET (DOXYFILE_DSOS_FILE "${DGL_BINARY_DIR}/doc/Doxyfile-DSOs")
		SET (DOXYFILE_CLASSES_FILE "${DGL_BINARY_DIR}/doc/Doxyfile-classes")

		IF (WIN32)
			STRING (REPLACE "/" "\\\\" DOXYFILE_TAG_FILE "${DOXYFILE_TAG_FILE}")
			STRING (REPLACE "/" "\\\\" DOXYFILE_DSOS_FILE "${DOXYFILE_DSOS_FILE}")
			STRING (REPLACE "/" "\\\\" DOXYFILE_CLASSES_FILE "${DOXYFILE_CLASSES_FILE}")
			SET (DOXYGEN_WINDOWS_ENCODING YES)
		ELSE (WIN32)
			SET (DOXYGEN_WINDOWS_ENCODING NO)
		ENDIF (WIN32)

		IF (DOXYGEN_DOT_EXECUTABLE AND DOXYGEN_EXECUTABLE)
			SET (DGL_WITH_DOT "YES")
		ELSE (DOXYGEN_DOT_EXECUTABLE AND DOXYGEN_EXECUTABLE)
			SET (DGL_WITH_DOT "NO")
		ENDIF (DOXYGEN_DOT_EXECUTABLE AND DOXYGEN_EXECUTABLE)

		FILE (REMOVE_RECURSE ${DGL_BINARY_DIR}/doc/html)
		FILE (MAKE_DIRECTORY ${DGL_BINARY_DIR}/doc/html)
		FILE (REMOVE_RECURSE ${DGL_BINARY_DIR}/doc/man)
		FILE (MAKE_DIRECTORY ${DGL_BINARY_DIR}/doc/man)

		SET (DGL_DOXYGEN_GENERATE_TAGFILE_CLASSES "classes.tag")
		SET (DGL_DOXYGEN_GENERATE_TAGFILE_DSOS "DSOs.tag")

		SET (DGL_DOXYGEN_TAGFILES "")
		SET (DGL_DOXYGEN_GENERATE_TAGFILE ${DGL_BINARY_DIR}/doc/${DGL_DOXYGEN_GENERATE_TAGFILE_CLASSES})
		SET (DGL_DOXYGEN_OUTPUT_DIRECTORY ${DGL_BINARY_DIR}/doc/doxygen_classes_tagfile)
		SET (DGL_DOXYGEN_INPUT "${DGL_SOURCE_DIR}/include")
		SET (DGL_DOXYGEN_HTML_OUTPUT "")
		SET (DGL_DOXYGEN_FILE_PATTERNS "*.h")
		SET (DGL_DOXYGEN_EXCLUDE_FILES ${DGL_SOURCE_DIR}/include/dgl/DGLCameraThread.h)

		CONFIGURE_FILE (Doxyfile.in ${DGL_BINARY_DIR}/doc/Doxyfile-tag @ONLY)

		SET (DGL_DOXYGEN_TAGFILES "${DGL_DOXYGEN_GENERATE_TAGFILE_CLASSES}=../../${DGL_DOXYGEN_HTML_OUTPUT}")
		SET (DGL_DOXYGEN_GENERATE_TAGFILE ${DGL_BINARY_DIR}/doc/${DGL_DOXYGEN_GENERATE_TAGFILE_DSOS})
		SET (DGL_DOXYGEN_OUTPUT_DIRECTORY ${DGL_BINARY_DIR}/doc)
		SET (DGL_DOXYGEN_INPUT "${DGL_SOURCE_DIR}/DSOs")
		SET (DGL_DOXYGEN_HTML_OUTPUT "html/DSOs")
		SET (DGL_DOXYGEN_FILE_PATTERNS "*.cpp")
		SET (DGL_DOXYGEN_EXCLUDE_FILES "")

		CONFIGURE_FILE (Doxyfile.in ${DGL_BINARY_DIR}/doc/Doxyfile-DSOs @ONLY)
		FILE (MAKE_DIRECTORY ${DGL_BINARY_DIR}/doc/${DGL_DOXYGEN_HTML_OUTPUT})

		SET (DGL_DOXYGEN_TAGFILES "${DGL_DOXYGEN_GENERATE_TAGFILE_DSOS}=../../${DGL_DOXYGEN_HTML_OUTPUT}")
		SET (DGL_DOXYGEN_GENERATE_TAGFILE ${DGL_BINARY_DIR}/doc/${DGL_DOXYGEN_GENERATE_TAGFILE_CLASSES})
		SET (DGL_DOXYGEN_OUTPUT_DIRECTORY ${DGL_BINARY_DIR}/doc)
		SET (DGL_DOXYGEN_INPUT "${DGL_SOURCE_DIR}/include")
		SET (DGL_DOXYGEN_HTML_OUTPUT "html/classes")
		SET (DGL_DOXYGEN_FILE_PATTERNS "*.h")
		SET (DGL_DOXYGEN_EXCLUDE_FILES ${DGL_SOURCE_DIR}/include/dgl/DGLCameraThread.h)

		CONFIGURE_FILE (Doxyfile.in ${DGL_BINARY_DIR}/doc/Doxyfile-classes @ONLY)
		FILE (MAKE_DIRECTORY ${DGL_BINARY_DIR}/doc/${DGL_DOXYGEN_HTML_OUTPUT})

		INSTALL (DIRECTORY ${DGL_BINARY_DIR}/doc/html DESTINATION doc/dgl)
		INSTALL (DIRECTORY ${DGL_BINARY_DIR}/doc/man DESTINATION .)

		ADD_CUSTOM_TARGET (doxygen_build ALL COMMAND ${DOXYGEN_EXECUTABLE} "${DOXYFILE_TAG_FILE}" COMMAND ${DOXYGEN_EXECUTABLE} "${DOXYFILE_DSOS_FILE}" COMMAND ${DOXYGEN_EXECUTABLE} "${DOXYFILE_CLASSES_FILE}")
	ENDIF (DOXYGEN_EXECUTABLE)

ENDIF (DGL_BUILD_DOCUMENTATION)

