# CMakeLists.txt to build lib

ADD_SUBDIRECTORY( dgl )

IF( DGL_BUILD_WITH_OPENSCENEGRAPH )
	ADD_SUBDIRECTORY( dosg )
ENDIF( DGL_BUILD_WITH_OPENSCENEGRAPH )

IF( DGL_BUILD_WITH_COIN )
	ADD_SUBDIRECTORY( dcoin )
ENDIF( DGL_BUILD_WITH_COIN )

IF( DGL_BUILD_WITH_VTK )
	ADD_SUBDIRECTORY( dvtk )
ENDIF( DGL_BUILD_WITH_VTK )

