# CMakeLists.txt to build programs

IF( DARWIN )
	ADD_DEFINITIONS( -Wl,-bind_at_load )
ENDIF( DARWIN )

ADD_SUBDIRECTORY( dgl )

IF( DGL_BUILD_WITH_OPENSCENEGRAPH )
	ADD_SUBDIRECTORY( dosg )
ENDIF( DGL_BUILD_WITH_OPENSCENEGRAPH )

IF( DGL_BUILD_WITH_COIN )
	ADD_SUBDIRECTORY( dcoin )
ENDIF( DGL_BUILD_WITH_COIN )

