# CMakeLists.txt to build DSOs/dPerformance

INCLUDE_DIRECTORIES (${DTK_INCLUDE})
ADD_LIBRARY (dPerformance MODULE dPerformance.cpp)
TARGET_LINK_LIBRARIES (dPerformance ${DTK_LIB})
SET_TARGET_PROPERTIES (dPerformance PROPERTIES PREFIX "")
INSTALL (TARGETS dPerformance LIBRARY DESTINATION etc/dtk/augmentDSO ARCHIVE
	DESTINATION etc/dtk/augmentDSO PERMISSIONS OWNER_READ OWNER_WRITE
	OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

