# CMakeLists.txt to build DSOs/dSound

INCLUDE_DIRECTORIES (${DTK_INCLUDE})
ADD_LIBRARY (dSound MODULE dSound.cpp)
TARGET_LINK_LIBRARIES (dSound ${DTK_LIB})
SET_TARGET_PROPERTIES (dSound PROPERTIES PREFIX "")
INSTALL (TARGETS dSound LIBRARY DESTINATION etc/dtk/augmentDSO ARCHIVE
	DESTINATION etc/dtk/augmentDSO PERMISSIONS OWNER_READ OWNER_WRITE
	OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

