# CMakeLists.txt to build DSOs/death

INCLUDE_DIRECTORIES (${DADS_SOURCE_DIR}/lib/dMessage ${DTK_INCLUDE})
ADD_LIBRARY (death MODULE death.cpp)
TARGET_LINK_LIBRARIES (death dMessage)
SET_TARGET_PROPERTIES (death PROPERTIES PREFIX "")
INSTALL (TARGETS death LIBRARY DESTINATION etc/dtk/augmentDSO ARCHIVE
	DESTINATION etc/dtk/augmentDSO PERMISSIONS OWNER_READ OWNER_WRITE
	OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

