# CMakeLists.txt to build DSOs/navRead

INCLUDE_DIRECTORIES (${DADS_SOURCE_DIR}/lib/dSocket ${DTK_INCLUDE})
ADD_LIBRARY (navRead MODULE navRead.cpp)
TARGET_LINK_LIBRARIES (navRead dSocket ${DTK_LIB})
SET_TARGET_PROPERTIES (navRead PROPERTIES PREFIX "")
INSTALL (TARGETS navRead LIBRARY DESTINATION etc/dtk/augmentDSO ARCHIVE
	DESTINATION etc/dtk/augmentDSO PERMISSIONS OWNER_READ OWNER_WRITE
	OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

