# CMakeLists.txt to build DSOs/navWrite

INCLUDE_DIRECTORIES (${DADS_SOURCE_DIR}/lib/dSocket ${DTK_INCLUDE})
ADD_LIBRARY (navWrite MODULE navWrite.cpp)
TARGET_LINK_LIBRARIES (navWrite dSocket ${DTK_LIB})
SET_TARGET_PROPERTIES (navWrite PROPERTIES PREFIX "")
INSTALL (TARGETS navWrite LIBRARY DESTINATION etc/dtk/augmentDSO ARCHIVE
	DESTINATION etc/dtk/augmentDSO PERMISSIONS OWNER_READ OWNER_WRITE
	OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

