INCLUDE_DIRECTORIES (${GLX_HEADER_PATH} ${X11_X11_INCLUDE_PATH}
        ${DTK_INCLUDE})
ADD_LIBRARY (nvSwapBarrier MODULE nvSwapBarrier.cpp)
TARGET_LINK_LIBRARIES (nvSwapBarrier GL GLU X11)
SET_TARGET_PROPERTIES (nvSwapBarrier PROPERTIES LINK_FLAGS -L${X11_LIB_PATH}
        PREFIX "")
INSTALL (TARGETS nvSwapBarrier LIBRARY DESTINATION etc/dgl/DSO PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

