# CMakeLists.txt to build DSOs/starter

INCLUDE_DIRECTORIES (${DADS_SOURCE_DIR}/lib/dMessage ${DTK_INCLUDE})
ADD_LIBRARY (starter MODULE starter.cpp fileParser.cpp)
TARGET_LINK_LIBRARIES (starter dMessage ${DTK_LIB})
SET_TARGET_PROPERTIES (starter PROPERTIES PREFIX "")
INSTALL (TARGETS starter LIBRARY DESTINATION etc/dtk/augmentDSO ARCHIVE
	DESTINATION etc/dtk/augmentDSO PERMISSIONS OWNER_READ OWNER_WRITE
	OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

