# CMakeLists.txt to build lib/dMessage

INCLUDE_DIRECTORIES (${DTK_INCLUDE})
ADD_LIBRARY (dMessage dMessage.cpp dPostOffice.cpp)
TARGET_LINK_LIBRARIES (dMessage ${DTK_LIB})
SET_TARGET_PROPERTIES (dMessage PROPERTIES VERSION ${LIBDMESSAGE_VERSION}
	SOVERSION ${LIBDMESSAGE_MAJOR_VERSION})
INSTALL (TARGETS dMessage LIBRARY DESTINATION lib ARCHIVE DESTINATION lib
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
	WORLD_READ WORLD_EXECUTE)

