# CMakeLists.txt to build lib/dSocket

ADD_LIBRARY (dSocket dSocket.cpp)
SET_TARGET_PROPERTIES (dSocket PROPERTIES VERSION ${LIBDSOCKET_VERSION}
	SOVERSION ${LIBDSOCKET_MAJOR_VERSION})
INSTALL (TARGETS dSocket LIBRARY DESTINATION lib ARCHIVE DESTINATION lib
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
	WORLD_READ WORLD_EXECUTE)

