# CMakeLists.txt to build programs/

IF (DADS_BUILD_DISPLAYSWITCHER)
	ADD_SUBDIRECTORY (displayswitcher)
ENDIF (DADS_BUILD_DISPLAYSWITCHER)
IF (DADS_BUILD_DISPLAYSWITCHD)
	ADD_SUBDIRECTORY (displayswitchd)
ENDIF (DADS_BUILD_DISPLAYSWITCHD)
IF (DADS_BUILD_DTKMASTERSERVER)
	ADD_SUBDIRECTORY (dtk-master)
ENDIF (DADS_BUILD_DTKMASTERSERVER)
IF (DADS_BUILD_DTKSWAPSERVER)
	ADD_SUBDIRECTORY (dtk-swapServer)
ENDIF (DADS_BUILD_DTKSWAPSERVER)
IF (DADS_BUILD_DTKVRCOSERVER)
	ADD_SUBDIRECTORY (dtk-VRCOServer)
ENDIF (DADS_BUILD_DTKVRCOSERVER)

