# CMakeLists.txt to build programs/dCreateShm

INCLUDE_DIRECTORIES (${DADS_SOURCE_DIR}/lib/dMessage ${DTK_INCLUDE})
ADD_EXECUTABLE (dCreateShm dCreateShm.cpp)
TARGET_LINK_LIBRARIES (dCreateShm dMessage)
INSTALL (TARGETS dCreateShm RUNTIME DESTINATION bin PERMISSIONS OWNER_READ
	OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ
	WORLD_EXECUTE)

