# CMakeLists.txt to build programs/dExec

INCLUDE_DIRECTORIES (${DADS_SOURCE_DIR}/lib/dMessage)
ADD_EXECUTABLE (dExec dExec.cpp)
TARGET_LINK_LIBRARIES (dExec dMessage)
INSTALL (TARGETS dExec RUNTIME DESTINATION bin PERMISSIONS OWNER_READ
	OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ
	WORLD_EXECUTE)

