# CMakeLists.txt to build programs/dKiller

INCLUDE_DIRECTORIES (${DADS_SOURCE_DIR}/lib/dMessage)
ADD_EXECUTABLE (dKiller dKiller.cpp)
TARGET_LINK_LIBRARIES  (dKiller dMessage)
INSTALL (TARGETS dKiller RUNTIME DESTINATION bin PERMISSIONS OWNER_READ
	OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ
	WORLD_EXECUTE)

