# CMakeLists.txt to build programs/dListener

INCLUDE_DIRECTORIES (${DADS_SOURCE_DIR}/lib/dMessage)
ADD_EXECUTABLE (dListener dListener.cpp)
TARGET_LINK_LIBRARIES (dListener dMessage)
INSTALL (TARGETS dListener RUNTIME DESTINATION bin PERMISSIONS OWNER_READ
	OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ
	WORLD_EXECUTE)

