# CMakeLists.txt to build programs/dRepeat

INCLUDE_DIRECTORIES (${DTK_INCLUDE})
ADD_EXECUTABLE (dRepeat dRepeat.cpp)
TARGET_LINK_LIBRARIES (dRepeat ${DTK_LIB})
INSTALL (TARGETS dRepeat RUNTIME DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

