# CMakeLists.txt to build programs/dSetEnv

INCLUDE_DIRECTORIES (${DADS_SOURCE_DIR}/lib/dMessage)
ADD_EXECUTABLE (dSetEnv dSetEnv.cpp)
TARGET_LINK_LIBRARIES (dSetEnv dMessage)
INSTALL (TARGETS dSetEnv RUNTIME DESTINATION bin PERMISSIONS OWNER_READ
	OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ
	WORLD_EXECUTE)

