# CMakeLists.txt to build programs/dUnsetEnv

INCLUDE_DIRECTORIES (${DADS_SOURCE_DIR}/lib/dMessage)
ADD_EXECUTABLE (dUnsetEnv dUnsetEnv.cpp)
TARGET_LINK_LIBRARIES (dUnsetEnv dMessage)
INSTALL (TARGETS dUnsetEnv RUNTIME DESTINATION bin PERMISSIONS OWNER_READ
	OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ
	WORLD_EXECUTE)

