# CMakeLists.txt to build programs/contribPrograms/soundPlayer

INCLUDE_DIRECTORIES (${DTK_INCLUDE})
ADD_EXECUTABLE (soundPlayer soundPlayer.cpp)
TARGET_LINK_LIBRARIES (soundPlayer ${DTK_LIB})
INSTALL (TARGETS soundPlayer RUNTIME DESTINATION bin PERMISSIONS OWNER_READ
	OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ
	WORLD_EXECUTE)

